crates/module-email-signup/tests/snapshots/templates__confirm_subject.snap
---
source: crates/module-email-signup/tests/templates.rs
expression: rendered.subject
---
Confirm your email for factory0
