crates/module-email-signup/tests/snapshots/templates__welcome_subject.snap
---
source: crates/module-email-signup/tests/templates.rs
expression: rendered.subject
---
Welcome to factory0
